RESOLVED FIXED61738
compilation fails with libpng-1.5
https://bugs.webkit.org/show_bug.cgi?id=61738
Summary compilation fails with libpng-1.5
Christoph Mende
Reported 2011-05-30 10:42:53 PDT
Created attachment 95355 [details] patch to use the current API WebCore::writeOutput() in WebCore/platform/image-encoders/skia/PNGImageEncoder.cpp tries to access (struct *png_struct)->io_ptr which is deprecated in libpng-1.4 and removed in 1.5. The new way is to use png_get_io_ptr(). Attached is a patch that uses this function.
Attachments
patch to use the current API (643 bytes, patch)
2011-05-30 10:42 PDT, Christoph Mende
no flags
Updated libpng15 patch (1.27 KB, patch)
2011-05-30 12:50 PDT, Christoph Mende
ap: review+
updated ChangeLog entry (1.27 KB, patch)
2011-06-01 00:26 PDT, Christoph Mende
no flags
Christoph Mende
Comment 1 2011-05-30 12:50:53 PDT
Created attachment 95363 [details] Updated libpng15 patch
Christoph Mende
Comment 2 2011-05-31 01:08:02 PDT
fyi, from the libpng manual: The png_get_io_ptr() function has been present since libpng-0.88, has never changed, and is unaffected by conditional compilation macros. so this patch is backwards compatible with pretty much every distribution that's newer than 1999.
Alexey Proskuryakov
Comment 3 2011-05-31 15:45:09 PDT
Comment on attachment 95363 [details] Updated libpng15 patch View in context: https://bugs.webkit.org/attachment.cgi?id=95363&action=review > WebCore/ChangeLog:8 > + No new tests. (OOPS!) Commit queue can't land the patch with this line. You should just remove it, as it's obvious why no test is needed. > WebCore/ChangeLog:11 > + * platform/image-encoders/skia/PNGImageEncoder.cpp: > + (WebCore::writeOutput): Use the new API As you explained in Bugzilla, the API is not new.
Christoph Mende
Comment 4 2011-06-01 00:26:25 PDT
Created attachment 95555 [details] updated ChangeLog entry
WebKit Review Bot
Comment 5 2011-06-18 12:54:09 PDT
Comment on attachment 95555 [details] updated ChangeLog entry Clearing flags on attachment: 95555 Committed r89200: <http://trac.webkit.org/changeset/89200>
WebKit Review Bot
Comment 6 2011-06-18 12:54:13 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.