2011-06-18  Christoph Mende  <mende.christoph@gmail.com>

Reviewed by Darin Adler.

        compilation fails with libpng-1.5
        https://bugs.webkit.org/show_bug.cgi?id=61738

        * platform/image-encoders/skia/PNGImageEncoder.cpp:
        (WebCore::writeOutput): Use getter function instead of direct access

Canonical link: https://commits.webkit.org/78529@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@89200 268f45cc-cd09-0410-ab3c-d52691b4dbfc